# comodules

./: .gitignore  CLAUDE.md  Cargo.toml  TODO.md  page.json
crates/algebra/: .gitignore  Cargo.toml
crates/algebra/src/: abelian.rs  field.rs  lib.rs  matrix.rs  ring.rs  snf.rs
crates/algebra/src/matrices/: f2_linalg.rs  f2_m4ri.rs  f2_matrix.rs  flat_matrix.rs  fp_crate.rs  linalg.rs  mod.rs
crates/algebra/src/rings/: finite_fields.rs  mod.rs  univariate_polynomial_ring.rs
crates/algebra/src/tests/: f2_linalg_tests.rs  f2_matrix_tests.rs  field_abelian_tests.rs  field_tests.rs  flat_matrix_matrix_tests.rs  mod.rs
crates/algebra/src/unipol/: cohomology.rs  cokernel.rs  mod.rs  morphism.rs
crates/algebra/src/unipol/tests/: cohomology_difficult_tests.rs  cohomology_simple_tests.rs  mod.rs  real_morphism_tests.rs  snf_tests.rs  trivial_morphism_tests.rs
examples/comodule/: A(0).txt  A(0)_comod.txt  A(0)_thing.txt  A(1).txt  F2_comod.txt  gen_comod.txt  weird_comod.txt
examples/direct/: A(0).txt  A(1)_C.txt  A(1)_dual_graded.txt  A(2).txt
examples/kcoalgebras/: A(0).txt  A(0)_gen.txt  A(1).txt  A(2).txt
examples/polynomial/: A(1).txt  A(1)_C.txt  A(2).txt  A(2)_C.txt  A(3).txt  A.txt  A_C.txt  P(0).txt  P(3).txt  Test.txt  X(2).txt
src/: basiselement.rs  coalgebra.rs  comodule.rs  export.rs  field.rs  field_case_implementation.rs  fp.rs  graded.rs  graded_module.rs  graded_module_morphism.rs  graded_space.rs  grading.rs  groups.rs  helper.rs  hopfalgebra.rs  lib.rs  linearalgebra.rs  main.rs  matrix.rs  module.rs  page.rs  resolution.rs  superparallel.rs  tensor.rs  traits.rs  types.rs  utils.rs
src/backup/: groups.rs
src/comodule/: comodule.rs  kcoalgebra.rs  kcomodule.rs  kmorphism.rs  ktensor.rs  mod.rs  parsers.rs  rcoalgebra.rs  rcomodule.rs  rmorphism.rs  rparser.rs  tensor.rs  traits.rs
src/comodule/tests/: kcoalgebra_tests.rs  kcomod_tests.rs  kmorph_tests.rs  ktensor_tests.rs  mod.rs  rcomod_tests.rs  rmorph_tests.rs  rmorphism_tests.rs
src/export/: mod.rs
src/grading/: bigrading.rs  bigrading_tests.rs  grading.rs  mod.rs  tensor.rs  tensor_tests.rs  unigrading.rs
src/k_comodule/: graded_space.rs  kcoalgebra.rs  kcomodule.rs  kmorphism.rs  kparsers.rs  mod.rs  parsers.rs
src/k_comodule/tests/: graded_tests.rs  kcoalgebra_tests.rs  kcomod_tests.rs  kmorph_tests.rs  mod.rs
src/k_t_comodule/: graded_module.rs  graded_module_morphism.rs  k_t_coalgebra.rs  k_t_comodule.rs  k_t_morphism.rs  k_t_parser.rs  mod.rs  rcoalgebra.rs
src/linalg/: field.rs  flat_matrix.rs  graded.rs  grading.rs  groups.rs  matrix.rs  mod.rs  module.rs  ring.rs  row_matrix.rs
src/module/: mod.rs  module.rs  morphism.rs  snf.rs
src/polynomial/: mod.rs  multivariate.rs  polynomial.rs
src/resolution/: cokercell.rs  datacell.rs  mod.rs  resolve_by_s.rs  superparallel.rs
src/tests/: bigrading_tests.rs  graded_tests.rs  mod.rs  tensor_tests.rs
tests/: A(0).json  A(0)page.json  A(1).json  A(1)page.json  A(2).json  A(2)page.json  group_tests.rs  k_tests.rs  kt_tests.rs  test.rs
tools/: group_to_coalg.py
(+19 files in other folders)
