[package]
name = "comodules"
version = "0.1.2"
edition = "2021"
description = "A library for calculating Ext for coalgebra and comodules. Also does Finite Field linear algebra."
authors = ["Chris Vos", "Jacco Hijmans"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/chrisvossetje/comodules" 

[profile.profile]
inherits = "release" # Inherit settings from the release profile
debug = true         # Enable debug symbols
strip = "none"

[lib]
name = "comodules"

[[bin]]
name = "comdule"      
path = "src/bin/main.rs"

[dependencies]
serde =  { version = "1.0", features = ["derive"] }
serde_json = "1.0"
itertools = "0.13.0"
rayon = "1.10"
ahash = "0.8.11"
getrandom = { version = "0.2", features = ["js"] }
